force-app/main/default/objects/Student_Marks_M__c/Student_Marks_M__c.object-meta.xml
<CustomObject>
    <label>Student Marks M</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Student Marks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students Marks M</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>