force-app/main/default/objects/Student_Marks_M__c/fields/Student_Master_M__c.field-meta.xml
<CustomField>
    <fullName>Student_Master_M__c</fullName>
    <label>Student Master M</label>
    <referenceTo>Student_Master_M__c</referenceTo>
    <relationshipLabel>Students Marks M</relationshipLabel>
    <relationshipName>Students_Marks_M</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>