force-app/main/default/objects/Student_Marks_M__c/validationRules/Marks_is_between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_is_between_0_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>Marks__c  &lt;= 0 ||  Marks__c &gt; 100</errorConditionFormula>
    <errorMessage>Marks_is_between_0_and_100</errorMessage>
</ValidationRule>